--- a/src/apps_common/paginator/static/paginator/scss/paginator.scss
+++ b/src/apps_common/paginator/static/paginator/scss/paginator.scss
@@ -21,7 +21,7 @@
   .item {
     padding: 0 10px;
     margin: 0 8px;
-    @include media(mobile, tablet) {
+    @include media_interval(0, $media1024) {
       padding: 0 8px;
       margin: 0 6px;
     }
