--- a/src/static/scss/header.scss
+++ b/src/static/scss/header.scss
@@ -5,7 +5,7 @@
   z-index: 100;
   background: rgba(green, 0.8);
   @include overlay($height: auto);
-  @include media(mobile) {
+  @include media_interval(0, $media768) {
     padding: 25px 0;
   }
 
