--- a/src/apps_common/menu/static/menu/scss/menu.scss
+++ b/src/apps_common/menu/static/menu/scss/menu.scss
@@ -22,6 +22,7 @@
       a {
         display: inline-block;
         padding: 5px;
+        line-height: 1;
         @include default_fontsize;
 
         &:hover {
@@ -79,7 +80,7 @@
 
   &.active {
     top: -4px;
-    
+
     &:before {
       top: 50%;
       box-shadow: transparent 0 0 0 0;
