--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -1,7 +1,7 @@
 {% load seo %}
 {% load solo_tags %}
 
-<div id="footer">
+<footer>
     {% get_solo 'config.Config' as config %}
     
     {% seo_block %}
@@ -13,4 +13,4 @@
             </div>
         </div>
     </div>
-</div>
+</footer>
