--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,6 +1,6 @@
 {% load menu %}
 
-<div id="header">
+<header>
     <div class="table grid">
         <div class="cell gc-wide-2 gc-2 gc-tablet-7 gc-mobile-3">
             <a href="/" id="logo"></a>
@@ -15,4 +15,4 @@
             </div>
         </div>
     </div>
-</div>
+</header>
