--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -90,6 +90,11 @@
   }
 }
 
+#comments {
+  padding: 40px 0;
+  background: black;
+}
+
 #social_buttons {
     background-color: #000000;
     @include no_fontsize;
