--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -59,14 +59,14 @@
             <div class="gc-full gc-alone">
                 <div class="slider3d">
                     <div class="slider3d-wrapper">
-                        <img class="slide front" src="{% static 'main/img/slider/Chrysanthemum.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Desert.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Hydrangeas.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Jellyfish.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Koala.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Lighthouse.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Penguins.jpg' %}">
-                        <img class="slide" src="{% static 'main/img/slider/Tulips.jpg' %}">
+                        <img class="slide front" src="{% static 'main/img/slider/Chrysanthemum.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Desert.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Hydrangeas.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Jellyfish.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Koala.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Lighthouse.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Penguins.jpg' %}" alt="">
+                        <img class="slide" src="{% static 'main/img/slider/Tulips.jpg' %}" alt="">
                     </div>
                 </div>
             </div>
