--- a/src/apps_common/comments/templates/comments/comment.html
+++ b/src/apps_common/comments/templates/comments/comment.html
@@ -27,8 +27,8 @@
                  height="{{ comment.user.avatar.variations.micro.size.1 }}">
         </a>
         <a class="nickname" href="{% url 'users:profile' comment.user.username %}">{{ comment.user.username }}</a>
-        <time datetime="{{ comment.created|date:"c" }}">{{ comment.created|shortdate }}</time>
-        <a class="hashlink" href="#comment-{{ comment.id }}" name="comment-{{ comment.id }}">#</a>
+        <time datetime="{{ comment.created|date:"Y-m-d H:i:sO" }}">{{ comment.created|shortdate }}</time>
+        <a class="hashlink" href="#comment-{{ comment.id }}" id="comment-{{ comment.id }}">#</a>
     </div>
     
     <div class="text">
