--- a/src/libs/ckeditor/templates/ckeditor/popup_response.html
+++ b/src/libs/ckeditor/templates/ckeditor/popup_response.html
@@ -2,7 +2,7 @@
 <html>
   <head><title></title></head>
   <body>
-    <script type="text/javascript">
+    <script>
       opener.dismissPhotoChangePopup(window, "{{ newTag }}");
     </script>
   </body>
