--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -7,18 +7,18 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" class="no-js" lang="{{ LANGUAGE_CODE }}">
 <head>
-    <title>{% block title %}{{ seo.title }}{% endblock %}</title>
+    <meta charset="utf-8">
     <meta name="keywords" content="{{ seo.keywords }}" />
     <meta name="description" content="{{ seo.description }}" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>{% block title %}{{ seo.title }}{% endblock %}</title>
     <link href="{% static 'img/favicon.png' %}" rel="icon" type="image/x-icon" />
     <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
-    <script type="text/javascript">
+    <script>
         var docElement = document.documentElement;
         docElement.className = docElement.className.replace(/\bno-js\b/, '') + ' js';
     </script>
-    <script type="text/javascript" src="{% url 'jsi18n' %}"></script>
+    <script src="{% url 'jsi18n' %}"></script>
 
     {% opengraph %}
 
