--- a/src/templates/layout.html
+++ b/src/templates/layout.html
@@ -12,7 +12,7 @@
     <meta name="description" content="{{ seo.description }}" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{{ seo.title }}{% endblock %}</title>
-    <link href="{% static 'img/favicon.png' %}" rel="icon" type="image/x-icon" />
+    <link rel="icon" href="{% static 'img/favicon.png' %}" type="image/x-icon" />
     <link rel="apple-touch-icon-precomposed" sizes="32x32" href="{% static 'img/favicon.png' %}">
     <script>
         var docElement = document.documentElement;
