--- a/src/libs/sprite_image/templates/sprite_image/widget.html
+++ b/src/libs/sprite_image/templates/sprite_image/widget.html
@@ -20,11 +20,13 @@
         </div>
 
         <div class="sprite-icon-dropdown">
-            {% for key, val in choices.items %}
-                <div class="sprite-icon-item {% if key == value %}active{% endif %}"
-                     style="background-position: {{ val.0 }}px {{ val.1 }}px"
-                     data-key="{{ key }}"></div>
-            {% endfor %}
+            <div class="sprite-icon-list">
+                {% for key, val in choices.items %}
+                    <div class="sprite-icon-item {% if key == value %}active{% endif %}"
+                         style="background-position: {{ val.0 }}px {{ val.1 }}px"
+                         data-key="{{ key }}"></div>
+                {% endfor %}
+            </div>
         </div>
     </div>
 </div>
