--- a/src/apps_common/gallery/static/gallery/admin/css/gallery.css
+++ b/src/apps_common/gallery/static/gallery/admin/css/gallery.css
@@ -161,6 +161,7 @@
     overflow: hidden;
     width: 100%;
     height: 100%;
+    text-align: center;
     background: url(../img/loading.gif) no-repeat 50% 50%;
 }
 
@@ -193,12 +194,13 @@
 }
 .gallery-item-error .item-preloader span {
     position: absolute;
+    padding: 10px;
     left: 0;
     top: 0;
     font-size: 12px;
     font-weight: bold;
+    text-align: left;
     line-height: 1.1;
-    padding: 10px;
     z-index: 10;
 }
 .gallery-item-error .item-preloader:before {
