--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -48,7 +48,7 @@
 
     <div id="text-content">
         <div class="grid">
-            <article class="gc-wide-6 gc-6 gc-alone gc-center">
+            <article class="text-styles gc-wide-6 gc-6 gc-alone gc-center">
                 {% away config.text|typograf|safe %}
             </article>
         </div>
