--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -54,24 +54,25 @@
         </div>
     </div>
 
+    {% if config.gallery and config.gallery.image_items %}
     <div id="slider_example">
         <div class="grid">
             <div class="gc-full gc-alone">
                 <div class="slider3d">
                     <div class="slider3d-wrapper">
-                        <img class="slide front" src="{% static 'main/img/slider/Chrysanthemum.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Desert.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Hydrangeas.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Jellyfish.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Koala.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Lighthouse.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Penguins.jpg' %}" alt="">
-                        <img class="slide" src="{% static 'main/img/slider/Tulips.jpg' %}" alt="">
+                        {% for item in config.gallery.image_items %}
+                            <img class="slide {% if forloop.first %}front{% endif %}"
+                                 src="{{ item.image.normal.url }}"
+                                 alt=""
+                                 width="{{ item.image.normal.dimensions.0 }}"
+                                 height="{{ item.image.normal.dimensions.1 }}">
+                        {% endfor %}
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    {% endif %}
 
     <div id="comments">
         <div class="grid">
