--- a/src/static/scss/layout.scss
+++ b/src/static/scss/layout.scss
@@ -48,6 +48,7 @@ p {
   display: table;
   width: 100%;
   height: 100%;
+  table-layout: fixed;
 
   .header-wrapper {
     display: table-row;
@@ -57,7 +58,7 @@ p {
   .content-wrapper {
     display: table-row;
   }
-  
+
   .footer-wrapper {
     display: table-row;
     height: 1px;
