--- a/src/apps_common/seo/templates/seo/block.html
+++ b/src/apps_common/seo/templates/seo/block.html
@@ -1,3 +1,5 @@
+{% load text %}
+
 <div class="seo-text grid">
     <div class="gc-full gc-alone">
         <div class="text-wrapper {% if animated %}animated{% endif %}">
