--- a/src/apps_common/comments/templates/comments/comment.html
+++ b/src/apps_common/comments/templates/comments/comment.html
@@ -1,28 +1,22 @@
 {% load i18n %}
 {% load away %}
+{% load dates %}
 {% load comments %}
 
-{% call comment.can_reply request.user as can_reply %}
-{% call comment.can_vote request.user as can_vote %}
-{% call comment.can_edit request.user as can_edit %}
-{% call comment.can_delete request.user as can_delete %}
-{% call comment.can_restore request.user as can_restore %}
-
-
-<div class="comment comment-level-{{ comment.final_level }} {% if comment.deleted %}comment-deleted{% endif %}" 
+<div class="comment comment-level-{{ comment.final_level }} {% if comment.deleted %}comment-deleted{% endif %}"
      data-id="{{ comment.id }}" data-level="{{ comment.level }}">
     <div class="info">
-        <div class="rating {% if not can_vote %}disabled{% endif %}">
+        <div class="rating {% if not comment.can_vote %}disabled{% endif %}">
             <span>{{ comment.rating|format_rating }}</span>
             {% with vote=comment|get_vote:request.user %}
                 <a href="#" class="rating-like {% if vote == 1 %}voted{% endif %}"></a>
                 <a href="#" class="rating-dislike {% if vote == -1 %}voted{% endif %}"></a>
             {% endwith %}
         </div>
-        
+
         <a class="avatar" href="{% url 'users:profile' comment.user.username %}">
             <img alt=""
-                 src="{{ comment.user.micro_avatar }}" 
+                 src="{{ comment.user.micro_avatar }}"
                  width="{{ comment.user.avatar.variations.micro.size.0 }}"
                  height="{{ comment.user.avatar.variations.micro.size.1 }}">
         </a>
@@ -30,23 +24,23 @@
         <time datetime="{{ comment.created|date:"Y-m-d H:i:sO" }}">{{ comment.created|shortdate }}</time>
         <a class="hashlink" href="#comment-{{ comment.id }}" id="comment-{{ comment.id }}">#</a>
     </div>
-    
+
     <div class="text">
         {% away comment.text|striptags|linebreaksbr|urlize %}
     </div>
-    
+
     {% if request.user.is_authenticated %}
         <div class="actions">
-            {% if can_reply %} 
+            {% if comment.can_reply %}
                 <a href="#" class="reply">{% trans 'Reply' %}</a>
             {% endif %}
-            {% if can_edit %} 
+            {% if comment.can_edit %}
                 <a href="#" class="edit">{% trans 'Edit' %}</a>
             {% endif %}
-            {% if can_restore %} 
+            {% if comment.can_restore %}
                 <a href="#" class="restore">{% trans 'Restore' %}</a>
             {% endif %}
-            {% if can_delete %} 
+            {% if comment.can_delete %}
                 <a href="#" class="delete">{% trans 'Delete' %}</a>
             {% endif %}
         </div>
