fix comment bug

--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -87,7 +87,7 @@
     <div id="comments">
         <div class="grid">
             <div class="gc-full gc-alone">
-                {% comments config %}
+                {% comments_for config %}
             </div>
         </div>
     </div>
