--- a/src/apps/main/static/main/scss/index.scss
+++ b/src/apps/main/static/main/scss/index.scss
@@ -100,6 +100,19 @@
   background: black;
 }
 
+#form {
+  padding: 40px 0;
+  background: #202020;
+
+  label {
+    color: #FFFFFF;
+  }
+
+  .formset {
+    margin-top: 20px;
+  }
+}
+
 #social_buttons {
     background-color: #000000;
     @include no_fontsize;
