--- a/src/apps_common/comments/static/comments/scss/comments.scss
+++ b/src/apps_common/comments/static/comments/scss/comments.scss
@@ -36,7 +36,7 @@
     }
 
     .nickname {
-      color: #A0A0A0;
+      color: #B0B0B0;
       font-weight: bold;
       @include font-size(12px);
 
