--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,7 +1,11 @@
 {% extends 'layout.html' %}
 
-{% block title %}Ой-ой-ой{% endblock %}
+{% block title %}Error{% endblock %}
 
 {% block content %}
-    <h1>Ошибочка вышла...</h1>
+    <div class="grid">
+        <div class="gc gc-alone">
+            <h1>Server error</h1>
+        </div>
+    </div>
 {% endblock %}
