--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -1,4 +1,5 @@
 {% load menu %}
+{% load multilanguage %}
 
 <header>
     <div class="table grid">
@@ -6,13 +7,17 @@
             <a href="/" id="logo"></a>
         </div>
 
-        <div class="cell gc-wide-4 gc-4 gc-tablet-1 gc-mobile-1">
+        <div class="cell gc-wide-3 gc-3 gc-tablet-1 gc-mobile-1">
             <div class="menu-wrapper">
                 <span id="mobile-menu"></span>
                 <div id="main-menu">
                     {% main_menu %}
                 </div>
             </div>
+        </div>
+        
+        <div class="cell gc-wide-1 gc-1 gc-tablet-1 gc-mobile-full">
+            {% select_language %}
         </div>
     </div>
 </header>
