--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -51,7 +51,7 @@
     <div id="text-content">
         <div class="grid">
             <article class="text-styles gc-wide-6 gc-6 gc-alone gc-center">
-                {% away config.text|typograf|safe %}
+                {% away config.text|typograf %}
             </article>
         </div>
     </div>
