--- a/src/static/scss/text_styles.scss
+++ b/src/static/scss/text_styles.scss
@@ -27,16 +27,21 @@
     margin-bottom: 10px;
   }
 
+  h1, h2, h3, h4, h5, h6 {
+    line-height: 1.2;
+    font-weight: bold;
+  }
   h1, h2, h3 {
     margin: 1.1em 0 0.55em;
-    line-height: 1.2;
     word-break: break-word;
-    font-weight: bold;
     @include font-size(30px);
     @include media_interval(0, $media768) {
       letter-spacing: 1px;
       @include font-size(24px);
     }
+  }
+  h4, h5, h6 {
+    margin-bottom: 0.75em;
   }
 
   h2 {
