--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,7 +1,9 @@
 {% extends 'layout.html' %}
 
-{% block title %}Страница не найдена{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans 'Page not found' %}{% endblock %}
 
 {% block content %}
-    <h1>К сожалению, запрашиваемая вами страница не найдена.</h1>
+    <h1>{% trans 'Page not found' %}</h1>
 {% endblock %}
