--- a/src/templates/500.html
+++ b/src/templates/500.html
@@ -1,11 +1,13 @@
 {% extends 'layout.html' %}
 
-{% block title %}Error{% endblock %}
+{% load i18n %}
+
+{% block title %}{% trans 'Server error' %}{% endblock %}
 
 {% block content %}
     <div class="grid">
         <div class="gc gc-alone">
-            <h1>Server error</h1>
+            <h1>{% trans 'Server error' %}</h1>
         </div>
     </div>
 {% endblock %}
