--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -142,6 +142,6 @@
         </form>
     </div>
 
-    {% render_blocks config %}
+    {% render_attached_blocks config %}
 
 {% endblock content %}
