--- a/src/static/scss/mixins/_background.scss
+++ b/src/static/scss/mixins/_background.scss
@@ -1,13 +1,7 @@
-/*
-
-  ...
-  background-image: url(img.png);
-  @include pixelRatio(2) {
-    background-image: url(img2x.png);
-  }
-  ...
-
-*/
+//  background-image: url(img.png);
+//  @include pixelRatio(2) {
+//    background-image: url(img2x.png);
+//  }
 @mixin pixelRatio($ratio) {
   @media (-webkit-min-device-pixel-ratio: $ratio),
          (min-resolution: #{$ratio}dppx),
