--- a/src/apps/main/templates/main/index.html
+++ b/src/apps/main/templates/main/index.html
@@ -79,7 +79,7 @@
                 <div class="gc-full gc-alone">
                     <div class="slider">
                         {% for item in config.gallery.image_items %}
-                            <img class="slide {% if forloop.first %}front{% endif %}"
+                            <img class="slide"
                                  src="{{ item.image.normal.url }}"
                                  alt=""
                                  width="{{ item.image.normal.dimensions.0 }}"
