--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -1,14 +1,31 @@
 @import "mixins";
 
-.slider {
-  position: relative;
-  line-height: 0;
-  text-align: center;
 
-  .slider-wrapper {
+.slider-root {
+  @include no_fontsize;
 
-    .slide {
+  .slider-list {
+    position: relative;
+    overflow: hidden;
+  }
 
+  .slider-slide {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    text-align: center;
+    z-index: 5;
+
+    &.slider-slide-ative {
+      position: relative;
+      top: 0;
+      left: 0;
+    }
+
+    img {
+      width: 45%;
+      height: auto;
     }
   }
 }
