--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -2,6 +2,8 @@
 
 
 .slider-root {
+  position: relative;
+  padding: 0 60px;
   @include no_fontsize;
 
   .slider-list {
@@ -11,21 +13,76 @@
 
   .slider-slide {
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 100%;
     width: 100%;
     text-align: center;
     z-index: 5;
+    @include transform(translate3d(0, -50%, 0));
 
-    &.slider-slide-ative {
+    &.slider-slide-active {
       position: relative;
       top: 0;
       left: 0;
+      @include transform(none);
     }
 
     img {
-      width: 45%;
+      width: 50%;
       height: auto;
+    }
+  }
+
+  // Controls
+  .arrow {
+    position: absolute;
+    overflow: hidden;
+    top: 0;
+    width: 60px;
+    height: 100%;
+    z-index: 10;
+    cursor: pointer;
+    @include unselectable;
+    &.arrow-left {
+      left: 0;
+      &:hover {
+        &:before {
+          background-position: left -40px;
+          @include transform(translate(-50%, -50%) scale(1.2));
+        }
+      }
+
+      &:before {
+        background-position: left 0;
+      }
+    }
+    &.arrow-right {
+      right: 0;
+      &:hover {
+        &:before {
+          background-position: right -40px;
+          @include transform(translate(-50%, -50%) scale(1.2));
+        }
+      }
+
+      &:before {
+        background-position: right 0;
+      }
+    }
+
+    &:before {
+      content: '';
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      width: 40px;
+      height: 40px;
+      background: url(arrows.png) no-repeat;
+      background-size: 200%;
+      @include transform(translate(-50%, -50%));
+      @include transition-property(-webkit-transform, transform);
+      @include transition-duration(0.3s);
+      @include transition-timing-function(linear);
     }
   }
 }
