--- a/src/apps_common/gallery/templates/gallery/admin/gallery.html
+++ b/src/apps_common/gallery/templates/gallery/admin/gallery.html
@@ -19,6 +19,8 @@
     var admin_gallery_delete_item = "{% url 'admin_gallery:delete_item' %}";
     var admin_gallery_rotate_item = "{% url 'admin_gallery:rotate_item' %}";
     var admin_gallery_crop_item = "{% url 'admin_gallery:crop_item' %}";
+    var admin_gallery_get_description = "{% url 'admin_gallery:get_description' %}";
+    var admin_gallery_set_description = "{% url 'admin_gallery:set_description' %}";
 </script>
 
 {% block gallery %}
@@ -56,6 +58,7 @@
                         <a class="icon-edit item-crop" title="{% trans 'Crop image' %}"></a>
                         <a class="icon-repeat item-rotate-left" title="{% trans 'Rotate by 90 degrees counterclockwise' %}"></a>
                         <a class="icon-repeat item-rotate-right" title="{% trans 'Rotate by 90 degrees clockwise' %}"></a>
+                        <a class="icon-pencil item-description" title="{% trans 'Edit description' %}"></a>
                         <a class="icon-trash item-delete" title="{% trans 'Delete' %}"></a>
                     </span>
                 </div>
