--- a/src/static/scss/_mixins.scss
+++ b/src/static/scss/_mixins.scss
@@ -4,11 +4,12 @@
 @import 'mixins/box_sizing';
 @import 'mixins/clearfix';
 @import 'mixins/font_size';
-@import 'mixins/reset';
 @import 'mixins/grayscale';
+@import 'mixins/justify_blocks';
 @import 'mixins/linear_gradient';
 @import 'mixins/opacity';
 @import 'mixins/placeholder';
+@import 'mixins/reset';
 @import 'mixins/transition';
 @import 'mixins/transform';
 @import 'mixins/valign';
