slider list wrapper

--- a/src/static/scss/slider/plugins/controls.scss
+++ b/src/static/scss/slider/plugins/controls.scss
@@ -3,6 +3,10 @@
 
 .slider-root {
 
+  .slider-list-wrapper {
+    padding: 0 60px;
+  }
+
   // Controls
   .slider-arrow {
     position: absolute;
