--- a/src/static/scss/slider/slider.scss
+++ b/src/static/scss/slider/slider.scss
@@ -3,8 +3,11 @@
 
 .slider-root {
   position: relative;
-  padding: 0 60px;
   @include no_fontsize;
+
+  .slider-list-wrapper {
+    position: relative;
+  }
 
   .slider-list {
     position: relative;
